[tool.poetry]
name = "blazedns"
version = "0.1.0"
description = "blazeDNS is an application witch helps with managing BIND configuration via WebUI"
authors = ["Mateoops <mateoops.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
